--- a/index.html
+++ b/index.html
@@ -1042,8 +1042,8 @@
                 <h3>About ArchiNext INFRA</h3>
                 <p>A young and dynamic construction firm providing end-to-end solutions in building design and construction, combining modern engineering tools with practical site execution.</p>
                 <div class="social-links">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61579231570697&mibextid=kFxxJD" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/archinext_infra" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 </div>
