add changes fav con

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArchiNext INFRA - Next in Design. Next in Build.</title>
+    <!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
@@ -900,10 +903,79 @@ nav.active .close-menu-btn {
     </section>
 
     <!-- Team Section -->
+<section class="team-section" id="team">
+    <div class="section-header">
+        <h2>Our Core Team</h2>
+        <p>Qualified Team - Architects + Engineers + IT Expertise</p>
+    </div>
+
+    <div class="team-grid">
+        <div class="team-card">
+            <div class="team-avatar">
+                <i class="fas fa-user"></i>
+            </div>
+            <h3>Suranjan Saikia</h3>
+            <div class="role">Structural Engineer</div>
+            <div class="education">JEC | STAAD.Pro Expert</div>
+            <div class="contact">📞 +91 86381 54941</div>
+        </div>
+
+        <div class="team-card">
+            <div class="team-avatar">
+                <i class="fas fa-user"></i>
+            </div>
+            <h3>Bhabarnab Goswami</h3>
+            <div class="role">Civil Engineer</div>
+            <div class="education">Site Execution & Supervision</div>
+            <div class="contact">📞 +91 87209 10848</div>
+        </div>
+
+        <div class="team-card">
+            <div class="team-avatar">
+                <i class="fas fa-user"></i>
+            </div>
+            <h3>Manash Pratim Baruah</h3>
+            <div class="role">Civil Engineer</div>
+            <div class="education">Quality Management</div>
+            <div class="contact">📞 +91 91014 76942</div>
+        </div>
+
+        <div class="team-card">
+            <div class="team-avatar">
+                <i class="fas fa-user"></i>
+            </div>
+            <h3>Alangkrita Deka</h3>
+            <div class="role">Architect</div>
+            <div class="education">Planning & Design</div>
+        </div>
+
+        <div class="team-card">
+            <div class="team-avatar">
+                <i class="fas fa-user"></i>
+            </div>
+            <h3>Jintu Nath</h3>
+            <div class="role">CSE Engineer</div>
+            <div class="education">Digital Project Management</div>
+            <div class="contact">📞 +91 84864 07819</div>
+        </div>
+
+        <div class="team-card">
+            <div class="team-avatar">
+                <i class="fas fa-user"></i>
+            </div>
+            <h3>Rahul Yogi</h3>
+            <div class="role">JE Civil</div>
+            <div class="education">3D Drafting & Estimation</div>
+        </div>
+    </div>
+</section>
+
+
+    <!-- Team Section
     <section class="team-section" id="team">
         <div class="section-header">
             <h2>Our Core Team</h2>
-            <p>Qualified Team – Architects + Engineers + IT Expertise</p>
+            <p>Qualified Team - Architects + Engineers + IT Expertise</p>
         </div>
         <div class="team-grid">
             <div class="team-card">
@@ -955,7 +1027,7 @@ nav.active .close-menu-btn {
                 <div class="education">3D Drafting & Estimation</div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Why Choose Us Section -->
     <section class="why-choose-section" id="why-choose">
