--- a/index.html
+++ b/index.html
@@ -323,8 +323,64 @@
             line-height: 1.8;
         }
 
+/* Team Section */
+.team-section {
+    padding: 5rem 2rem;
+    background: var(--white);
+}
+.team-grid {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+}
+.team-card {
+    background: var(--light-gray);
+    border-radius: 15px;
+    padding: 2rem;
+    text-align: center;
+    transition: transform 0.3s;
+    border: 2px solid transparent;
+}
+.team-card:hover {
+    transform: translateY(-5px);
+    border-color: var(--primary-blue);
+}
+.team-avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: linear-gradient(135deg, var(--primary-blue), var(--primary-orange));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 1rem;
+    overflow: hidden;
+    border: 3px solid var(--primary-blue);
+}
+.team-avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.team-card h3 {
+    font-size: 1.2rem;
+    color: var(--dark-blue);
+    margin-bottom: 0.5rem;
+}
+.team-card .role {
+    color: var(--primary-orange);
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+.team-card .education {
+    color: #666;
+    font-size: 0.9rem;
+}
+
         /* Team Section */
-        .team-section {
+   /*     .team-section {
             padding: 5rem 2rem;
             background: var(--white);
         }
@@ -380,7 +436,7 @@
             color: #666;
             font-size: 0.9rem;
         }
-
+*/
         /* Why Choose Us Section */
         .why-choose-section {
             padding: 5rem 2rem;
@@ -850,6 +906,8 @@ nav.active .close-menu-btn {
         </div>
     </section>
 
+
+
     <!-- Services Section -->
     <section class="services-section" id="services">
         <div class="section-header">
@@ -904,6 +962,67 @@ nav.active .close-menu-btn {
 
     <!-- Team Section -->
 <section class="team-section" id="team">
+    <div class="section-header">
+        <h2>Our Core Team</h2>
+        <p>Qualified Team - Architects + Engineers + IT Expertise</p>
+    </div>
+    <div class="team-grid">
+        <div class="team-card">
+            <div class="team-avatar">
+                <img src="image/pic2.jpg" alt="Suranjan Saikia">
+            </div>
+            <h3>Suranjan Saikia</h3>
+            <div class="role">Structural Engineer</div>
+            <div class="education">JEC | STAAD.Pro Expert</div>
+            <div class="contact">📞 +91 83998 39870</div>
+        </div>
+        <div class="team-card">
+            <div class="team-avatar">
+                <img src="image/pic1.jpg" alt="Bhabarnab Goswami">
+            </div>
+            <h3>Bhabarnab Goswami</h3>
+            <div class="role">Civil Engineer</div>
+            <div class="education">Site Execution & Supervision</div>
+            <div class="contact">📞 +91 87209 10848</div>
+        </div>
+        <div class="team-card">
+            <div class="team-avatar">
+                <img src="image/pic3.jpg" alt="Manash Pratim Baruah">
+            </div>
+            <h3>Manash Pratim Baruah</h3>
+            <div class="role">Civil Engineer</div>
+            <div class="education">Quality Management</div>
+            <div class="contact">📞 +91 91014 76942</div>
+        </div>
+        <div class="team-card">
+            <div class="team-avatar">
+                <img src="image/pic6.jpg" alt="Alangkrita Deka">
+            </div>
+            <h3>Alangkrita Deka</h3>
+            <div class="role">Architect</div>
+            <div class="education">Planning & Design</div>
+        </div>
+        <div class="team-card">
+            <div class="team-avatar">
+                <img src="image/pic4.jpg" alt="Jintu Nath">
+            </div>
+            <h3>Jintu Nath</h3>
+            <div class="role">CSE Engineer</div>
+            <div class="education">Digital Project Management</div>
+            <div class="contact">📞 +91 84864 07819</div>
+        </div>
+        <div class="team-card">
+            <div class="team-avatar">
+                <img src="image/pic5.jpg" alt="Rahul Nath">
+            </div>
+            <h3>Rahul Nath</h3>
+            <div class="role">JE Civil</div>
+            <div class="education">3D Drafting & Estimation</div>
+        </div>
+    </div>
+</section>
+    <!-- Team Section -->
+<!-- <section class="team-section" id="team">
     <div class="section-header">
         <h2>Our Core Team</h2>
         <p>Qualified Team - Architects + Engineers + IT Expertise</p>
@@ -968,66 +1087,9 @@ nav.active .close-menu-btn {
             <div class="education">3D Drafting & Estimation</div>
         </div>
     </div>
-</section>
+</section> -->
 
 
-    <!-- Team Section
-    <section class="team-section" id="team">
-        <div class="section-header">
-            <h2>Our Core Team</h2>
-            <p>Qualified Team - Architects + Engineers + IT Expertise</p>
-        </div>
-        <div class="team-grid">
-            <div class="team-card">
-                <div class="team-avatar">
-                    <i class="fas fa-user"></i>
-                </div>
-                <h3>Suranjan Saikia</h3>
-                <div class="role">Structural Engineer</div>
-                <div class="education">JEC | STAAD.Pro Expert</div>
-            </div>
-            <div class="team-card">
-                <div class="team-avatar">
-                    <i class="fas fa-user"></i>
-                </div>
-                <h3>Bhabarnab Goswami</h3>
-                <div class="role">Civil Engineer</div>
-                <div class="education">Site Execution & Supervision</div>
-            </div>
-            <div class="team-card">
-                <div class="team-avatar">
-                    <i class="fas fa-user"></i>
-                </div>
-                <h3>Manash Pratim Baruah</h3>
-                <div class="role">Civil Engineer</div>
-                <div class="education">Quality Management</div>
-            </div>
-            <div class="team-card">
-                <div class="team-avatar">
-                    <i class="fas fa-user"></i>
-                </div>
-                <h3>Alangkrita Deka</h3>
-                <div class="role">Architect</div>
-                <div class="education">Planning & Design</div>
-            </div>
-            <div class="team-card">
-                <div class="team-avatar">
-                    <i class="fas fa-user"></i>
-                </div>
-                <h3>Jintu Nath</h3>
-                <div class="role">CSE Engineer</div>
-                <div class="education">Digital Project Management</div>
-            </div>
-            <div class="team-card">
-                <div class="team-avatar">
-                    <i class="fas fa-user"></i>
-                </div>
-                <h3>Rahul Yogi</h3>
-                <div class="role">JE Civil</div>
-                <div class="education">3D Drafting & Estimation</div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- Why Choose Us Section -->
     <section class="why-choose-section" id="why-choose">
