add additional nu

--- a/index.html
+++ b/index.html
@@ -1001,6 +1001,7 @@ nav.active .close-menu-btn {
             <h3>Alangkrita Deka</h3>
             <div class="role">Architect</div>
             <div class="education">Planning & Design</div>
+            <div class="contact">📞 +91 60026 80456</div>
         </div>
         <div class="team-card">
             <div class="team-avatar">
@@ -1018,6 +1019,7 @@ nav.active .close-menu-btn {
             <h3>Rahul Nath</h3>
             <div class="role">JE Civil</div>
             <div class="education">3D Drafting & Estimation</div>
+            <div class="contact">📞 ++91 60011 20537</div>
         </div>
     </div>
 </section>
