--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@ nav.active .close-menu-btn {
             <h3>Rahul Nath</h3>
             <div class="role">JE Civil</div>
             <div class="education">3D Drafting & Estimation</div>
-            <div class="contact">📞 ++91 60011 20537</div>
+            <div class="contact">📞 +91 60011 20537</div>
         </div>
     </div>
 </section>
