--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,8 @@ nav.active .close-menu-btn {
             </div>
             
             <div class="contact-form">
-                <form action="https://api.web3forms.com/submit" method="POST">
+                <!-- <form action="https://api.web3forms.com/submit"  method="POST"> -->
+                    <form action="https://formsubmit.co/archinextinfra@gmail.com" method="POST" >
                     <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
                     
                     <div class="form-group">
