--- a/index.html
+++ b/index.html
@@ -1171,9 +1171,8 @@ nav.active .close-menu-btn {
             </div>
             
             <div class="contact-form">
-                <!-- <form action="https://api.web3forms.com/submit"  method="POST"> -->
-                    <form action="https://formsubmit.co/archinextinfra@gmail.com" method="POST" >
-                    <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+                <form action="https://api.web3forms.com/submit"  method="POST">
+                    <input type="hidden" name="access_key" value="6535ad38-9fad-4324-b7b3-bef7d7195ba6">
                     
                     <div class="form-group">
                         <label for="name">Full Name *</label>
